# systems-code-examples

./: .gitignore  .gitpod.yml  .hgignore  .travis.yml  CMakeLists.txt  README.md  setup-gtest.sh
.github/workflows/: cmake.yml
better_gets/: CMakeLists.txt  main.c  main.cc
bounded-buffer/: CMakeLists.txt  bboptions.c  bboptions.h  bbuffer.c  bbuffer.h  bounded-buffer.c  millisleep.c  millisleep.h
bsd-tree-demo/: CMakeLists.txt  int-tree-main.c  int-tree.c  int-tree.h
bsd-tree-lib/: CMakeLists.txt  LICENSE  bsd-tree-lib.c  bsd-tree.h
c_intro/: CMakeLists.txt  Makefile.orig  debug.cc  demo  layout  list.c  list.cc  list.h  list.hh  main.cc  tests.c  tests.cc  tests.h
cbuffer_t/: CMakeLists.txt  cbuffer.c  cbuffer.h  charlist.c  charlist.h
charlist_t/: CMakeLists.txt  README  charlist.c  charlist.h  charlist.hh  charlist_tests.cc
dining-philosophers/: CMakeLists.txt  README.md  diner-demo.c  diners.c  diners.h  millisleep.c
dir_list/: CMakeLists.txt  main.c
dir_list_cpp/: CMakeLists.txt  main.cpp
domain_sock/: CMakeLists.txt  Makefile  client.c  client.cc  server.c
file_rw/: CMakeLists.txt  main.c  main.cc
fork/: CMakeLists.txt  Makefile  main.c  main.cc
fork_cpp/: CMakeLists.txt  main.cc
fork_exec/: CMakeLists.txt  main.c  main.cc
fork_pipe/: CMakeLists.txt  main.c
fork_sigchld/: CMakeLists.txt  Makefile.orig  main.c  main.cc
fork_sigchld2/: CMakeLists.txt  Makefile  main.c
getopt/: CMakeLists.txt  cl.c  cl.h  main.c
gnu_pth/: CMakeLists.txt  Makefile  README  main.c  main.cc
hello-exe/: CMakeLists.txt  demo.c
hello-lib/: CMakeLists.txt  hello.c  hello.h
linux-kernel/proc_module/: fortune.c  simple.c
linux-kernel/simple_chardev/: chardev.c
linux-kernel/syscall/: syscall.patch
linux-kernel/syscall/arch/x86/ia32/: ia32entry.S
linux-kernel/syscall/kernel/: sys.c
linux-kernel/syscall/test/: Makefile  main.cc
linux/proc_module/: Makefile
linux/simple_chardev/: Makefile  build.sh  clean.sh  setup_chardev.sh
linux/syscall/arch/x86/include/asm/: unistd_32.h  unistd_64.h
linux/syscall/arch/x86/kernel/: syscall_table_32.S
linux/syscall/include/linux/: unistd.h
linux/syscall/kernel/: sys.c
llnl_pthreads_examples/: CMakeLists.txt  llnl1.c  llnl2.c  llnl3.c  llnl_cv1.c  llnl_cv1_tsd.c
lwlog-demo/: CMakeLists.txt  lwlog-demo.c
lwlog-lib/: CMakeLists.txt  README  lwlog-lib.c
malloc/: CMakeLists.txt  Makefile  Makefile.orig  demo.c  malloc.c  malloc.h
minix-kernel/sample1/: Makefile  sample1.c
minix-kernel/time/: Makefile  time.c  time.h
minix/sample1/: sample1.c
minix/time/: time.c
mmap/: CMakeLists.txt  Makefile.orig  consumer.c  producer.c  producer.cc
mmap_locks/: CMakeLists.txt  Makefile  Makefile.orig  consumer.c  consumer.cc  message.c  message.cc  message.hh  producer.c  producer.cc
monitor/: CMakeLists.txt  Makefile  Makefile.orig  debug.cc  debug.hh  main.cc  monitor.c  monitor.cc  monitor.hh  queue.c  queue.cc  queue.hh
mutex/: CMakeLists.txt  Makefile  main.cc
objects/: CMakeLists.txt  main.c
parity/: CMakeLists.txt  Makefile.orig  parity.c
pic/: Makefile  Makefile.pic  README  main.c  main.pic.s  main.s
pic/results-gcc-9.3.0/: diff-pic-vs-nopic.diff  main.nopic.s  main.pic.s
qsort-demo/: CMakeLists.txt  try-qsort.c
rational_adt/: CMakeLists.txt  README  rational.c  rational.h  rational.hh  rational_demo.c  rational_tests.cc
read-write-demo/: CMakeLists.txt  read-demo.c  write-demo.c
regex-demo/: CMakeLists.txt  regex-match.c  regex-match.h  try-regex.c
scripts/: build-cmake-examples.sh  build-csharp-examples.sh  install-googletest.sh
semaphore/: CMakeLists.txt  Makefile  debug.cc  main.cc  mutex.h  queue.cc  queue.h  semaphore.cc  semaphore.h
simple_adt/: CMakeLists.txt  README  array.h  point.c  point.h  point.hh  point_demo.c  point_demo2.c  point_tests.cc
spin_lock/: CMakeLists.txt  Makefile  lock.c  lock.cc  lock.h  main.c
std-hsearch/: CMakeLists.txt  hsearch-better.c  hsearch-manpage-htable.c  hsearch-wordinfo.c  wordtable-demo.c  wordtable.c  wordtable.h
std-queue/: CMakeLists.txt  int_stack.c  int_stack.h  int_stack.hh  int_stack_demo.c  int_stack_tests.cc  queue-mva.c  queue-mva.pre  wordlist-demo.c  wordlist.c  wordlist.h
std-tsearch/: CMakeLists.txt  tsearch-manpage-tree.c  tsearch-wordinfo-demo.c
stm/: CMakeLists.txt  Makefile  main.c  main.cc  mutex.c  mutex.cc  trans.cc  trans.h  trans.hh
strbuffer-demo/: CMakeLists.txt  strbuffer_demo.c  strbuffer_getline_demo.c
strbuffer_t/: CMakeLists.txt  strbuffer.c  strbuffer.h  strbuffer_demo.c
strlen/: CMakeLists.txt  Makefile.orig  main.c
strtok/: CMakeLists.txt  Makefile.orig  main.c
syscall/: CMakeLists.txt  main.c  main.cc
threads/: CMakeLists.txt  threads.sln
threads/threads/: BoundBuffer.cs  ParallelComputation.cs  PipelineComputation.cs  Program.cs  TcpServer.cs  ThreadedList.cs  threads.csproj
threads_csharp/threads/: BoundBuffer.cs  ConcisePipelineComputation.cs  PipelineComputation.cs  Program.cs  TcpServer.cs
threads_csharp/threads/Properties/: AssemblyInfo.cs
vectored_io/: CMakeLists.txt  main.c  main.cc
wait/: CMakeLists.txt  main-normal.c  main.c
