project(OpSystemsCodeExamples)

cmake_minimum_required(VERSION 2.8.11)

set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(better_gets)
add_subdirectory(bounded-buffer)
add_subdirectory(c_intro)
add_subdirectory(dining-philosophers)
add_subdirectory(dir_list)
add_subdirectory(domain_sock)
add_subdirectory(file_rw)
add_subdirectory(fork)
add_subdirectory(fork_exec)
add_subdirectory(fork_pipe)
add_subdirectory(fork_sigchld)
add_subdirectory(fork_sigchld2)
add_subdirectory(getopt)
add_subdirectory(gnu_pth)
add_subdirectory(llnl_pthreads_examples)
add_subdirectory(malloc)
add_subdirectory(mmap)
add_subdirectory(mmap_locks)
add_subdirectory(monitor)
add_subdirectory(mutex)
add_subdirectory(objects)
add_subdirectory(parity)
add_subdirectory(qsort-demo)
add_subdirectory(read-write-demo)
add_subdirectory(regex-demo)
add_subdirectory(semaphore)
add_subdirectory(simple_adt)
add_subdirectory(spin_lock)
add_subdirectory(std-hsearch)
add_subdirectory(std-queue)
add_subdirectory(std-tsearch)
add_subdirectory(stm)
add_subdirectory(strbuffer_t)
add_subdirectory(strlen)
add_subdirectory(strtok)
add_subdirectory(syscall)
add_subdirectory(vectored_io)
add_subdirectory(wait)
